...
            android:background="@color/purple_200"
            app:popupTheme="@style/PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_archive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/search_marginStartEnd"
        android:layout_marginTop="@dimen/search_marginTopBottom"
        android:layout_marginEnd="@dimen/search_marginStartEnd"
        android:layout_marginBottom="@dimen/search_marginTopBottom"
...
        app:iconifiedByDefault="false"
        app:queryHint="@string/search"
        app:searchHintIcon="@null"
        app:searchIcon="@drawable/ic_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_archive_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/search_archive"
        android:visibility="gone" />

    <TextView
...
